--- a/quickclick/menu-new-2.html
+++ b/quickclick/menu-new-2.html
@@ -447,8 +447,8 @@
                                 </div>
                             </div>
                             <div class="bottom-btn-right clearfix">
-                                <a class="btn btn--primary-m" href="menu-new-2-add-product-1.html">+ 新增加購選項</a>
-                                <!-- <input class="btn btn--primary-m " type="submit" value="+ 新增加購選項"> -->
+                                <a class="btn btn--primary-m" href="menu-new-2-add-product-0.html">+ 選擇加購題型</a>
+                                <!-- <input class="btn btn--primary-m " type="submit" value="+ 選擇加購選項"> -->
                             </div>
                         </div>
                     </div>
