--- a/quickclick/store-list.html
+++ b/quickclick/store-list.html
@@ -29,7 +29,7 @@
                         <p>商店名稱</p>
                     </div>
                 </div>
-                <a class="field" href="#">
+                <a class="field" href="menu.html">
                     <div class="store-id">
                         <p>153</p>
                     </div>
