--- a/quickclick/menu-new-2-add-product-3.html
+++ b/quickclick/menu-new-2-add-product-3.html
@@ -19,7 +19,7 @@
                 <section id="popup-choose-add-group" class="white-popup mfp-hide popup-width-m">
                     <div class="popup-container">
                         <div class="top-title">
-                            <h4><span>編輯(or新增)加購選項</span></h4>
+                            <h4><span>編輯加購選項：紅茶</span></h4>
                         </div>
                         <div class="menu-product-info">
                             <div class="set-card">
@@ -41,13 +41,13 @@
                                     <fieldset class="clearfix">
                                         <label class="item-title">商品代碼</label>
                                         <div class="fillin-box">
-                                            <input type="" name="" value="">
+                                            <input type="" name="" value="AA123">
                                         </div>
                                     </fieldset>
                                     <fieldset class="clearfix">
                                         <label class="item-title">卡路里</label>
                                         <div class="fillin-box">
-                                            <input type="" name="" value="">
+                                            <input type="" name="" value="100">
                                         </div>
                                     </fieldset>
                                     <fieldset class="clearfix">
@@ -64,18 +64,100 @@
                                         </div>
                                     </fieldset>
                                     <fieldset class="clearfix">
-                                        <label class="item-title">選擇加購題型</label>
+                                        <label class="item-title">套用題型</label>
                                         <div class="fillin-box">
-                                            <div class="the-select">
-                                                <select class="" name="">
-                                                    <option value="0" selected="">請選擇</option>
-                                                    <option value="1">尺寸</option>
-                                                    <option value="2">甜度</option>
-                                                </select>
+                                            <ul class="add-list">
+                                                <li class="c-orange">
+                                                    <p>尺寸</p>
+                                                </li>
+                                                <li>
+                                                    <p>溫度</p>
+                                                </li>
+                                                <li>
+                                                    <p>甜度</p>
+                                                </li>
+                                            </ul>
+                                            <div class="bottom-btn-left clearfix">
+                                                <a class="btn btn--primary-m" href="menu-new-2-add-product-1.html">+ 選擇加購題型</a>
                                             </div>
                                         </div>
                                     </fieldset>
                                 </from>
+                            </div>
+                            <div class="set-card">
+                                <div class="top-item-title">
+                                    <div class="title-content">
+                                        <p>定價設定</p>
+                                        <div class="arr arr-down"></div>
+                                    </div>
+                                </div>
+                                <from class="fillin-info">
+                                    <fieldset class="clearfix">
+                                        <label class="item-title"><span class="c-red">*</span>價格</label>
+                                        <div class="fillin-box">
+                                            <input class="has-error" type="" name="" value="">
+                                            <p class="text-error">此欄位為必填項目。</p>
+                                        </div>
+                                    </fieldset>
+                                </from>
+                            </div>
+                            <div class="set-card">
+                                <div class="top-item-title">
+                                    <div class="title-content">
+                                        <p>語系設定<span>（顯示於消費者看）</span></p>
+                                        <div class="arr arr-down"></div>
+                                    </div>
+                                </div>
+                                <from class="fillin-info">
+                                    <fieldset class="clearfix">
+                                        <label class="item-title"><span class="c-red">*</span>繁體中文</label>
+                                        <div class="fillin-box">
+                                            <input class="has-error" type="" name="" value="紅茶">
+                                            <p class="text-error">此欄位為必填項目。</p>
+                                        </div>
+                                    </fieldset>
+                                    <fieldset class="clearfix">
+                                        <div class="fillin-box f-r clearfix">
+                                            <textarea placeholder="商品描述"></textarea>
+                                        </div>
+                                    </fieldset>
+                                    <fieldset class="clearfix">
+                                        <label class="item-title">简体中文</label>
+                                        <div class="fillin-box">
+                                            <input type="" name="" value="红茶">
+                                        </div>
+                                    </fieldset>
+                                    <fieldset class="clearfix">
+                                        <div class="fillin-box f-r clearfix">
+                                            <textarea placeholder="商品描述"></textarea>
+                                        </div>
+                                    </fieldset>
+                                    <fieldset class="clearfix">
+                                        <label class="item-title">ENGLISH</label>
+                                        <div class="fillin-box">
+                                            <input type="" name="" value="black tea">
+                                        </div>
+                                    </fieldset>
+                                    <fieldset class="clearfix">
+                                        <div class="fillin-box f-r clearfix">
+                                            <textarea placeholder="商品描述"></textarea>
+                                        </div>
+                                    </fieldset>
+                                    <fieldset class="clearfix">
+                                        <label class="item-title">日本語</label>
+                                        <div class="fillin-box">
+                                            <input type="" name="" value="紅茶">
+                                        </div>
+                                    </fieldset>
+                                    <fieldset class="clearfix">
+                                        <div class="fillin-box f-r clearfix">
+                                            <textarea placeholder="商品描述"></textarea>
+                                        </div>
+                                    </fieldset>
+                                </from>
+                            </div>
+                            <div class="bottom-btn-tool">
+                                <input class="btn--primary-xl " type="submit" value="儲存">
                             </div>
                         </div>
                     </div>
