新增 委刊單

--- a/CRM/customer_info.html
+++ b/CRM/customer_info.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>CRM 管理後台 - 客戶管理 - 佳量企業股份有限公司</title>
     <link rel="stylesheet" href="css/style.css">
-    <script type="text/javascript" src="on-server/css/fontawesome-all.css.js"></script>
     <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script type="text/javascript" src="js/menu.js"></script>
@@ -201,7 +200,7 @@
                         </li>
                     </ul>
                 </div>
-                <p class="text-more"><a href="#">More...</a></p>
+                <!-- <p class="text-more"><a href="#">More...</a></p> -->
                 <div class="company-department-list clearfix">
                     <h4 class="main-title">部門</h4>
                     <ul class="info">
@@ -257,7 +256,7 @@
                         </li>
                     </ul>
                 </div>
-                <p class="text-more"><a href="#">More...</a></p>
+                <!-- <p class="text-more"><a href="#">More...</a></p> -->
 
                 <div class="tools-bar clearfix">
                     <h4 class="main-title">委刊單紀錄</h4>
@@ -966,7 +965,7 @@
                                 </div> -->
                                 <!-- 按XX後出現"新增部門"按鈕↑ -->
                                 <div class="confirm">
-                                    <ul class="list-project-single clearfix">
+                                    <ul class="list-project-single pa-none clearfix">
                                         <li>
                                             <p>holkee team</p>
                                             <a class="delete"><i class="fas fa-times"></i></a>
