--- a/CRM/product.html
+++ b/CRM/product.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>CRM 管理後台 - 產品</title>
     <link rel="stylesheet" href="css/style.css">
-    <script type="text/javascript" src="on-server/css/fontawesome-all.css.js"></script>
     <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script type="text/javascript" src="js/menu.js"></script>
@@ -1202,12 +1201,12 @@
             <div class="fillin-box">
                 <form>
                     <div class="field clearfix">
-                        <div class="fillin-info">
+                        <div class="fillin-info width-100">
                             <fieldset class="clearfix">
-                                <input class="width-100 default" type="" name="" placeholder="新增文字捷徑，捷徑必須至少包含 3 個字元。" value="">
+                                <input class="default" type="" name="" placeholder="新增文字捷徑，捷徑必須至少包含 3 個字元。" value="">
                             </fieldset>
                             <fieldset>
-                                <textarea class="width-100" placeholder="請輸入條款內容"></textarea>
+                                <textarea placeholder="請輸入條款內容"></textarea>
                             </fieldset>
                         </div>
                     </div>
