調整地址變三欄+新增公司類別(直客/經銷商)
客戶頁：調整地址變三欄+新增公司類別(直客/經銷商)

--- a/CRM/customer.html
+++ b/CRM/customer.html
@@ -405,7 +405,23 @@
                             </fieldset>
                             <fieldset>
                                 <label class="item-title"><span class="c-red">*</span>公司地址</label>
-                                <input class="default" type="" name="" value="">
+                                <div class="confirm both-for-add clearfix">
+                                    <div class="the-select">
+                                        <select class="" name="">
+                                            <option value="0">請選擇縣市</option>
+                                            <option value="1">台北市</option>
+                                            <option value="2">新北市</option>
+                                        </select>
+                                    </div>
+                                    <div class="the-select">
+                                        <select class="" name="">
+                                            <option value="0">請選擇地區</option>
+                                            <option value="1">中山區</option>
+                                            <option value="2">大安區</option>
+                                        </select>
+                                    </div>
+                                    <input class="default" type="" name="" value="">
+                                </div>
                             </fieldset>
                             <fieldset>
                                 <label class="item-title"><span class="c-red">*</span>公司電話</label>
@@ -425,6 +441,16 @@
                             <fieldset>
                                 <label class="item-title">公司 Facebook</label>
                                 <input class="default" type="" name="" value="">
+                            </fieldset>
+                            <fieldset>
+                                <label class="item-title"><span class="c-red">*</span>公司類別</label>
+                                <div class="the-select">
+                                    <select class="" name="">
+                                        <option value="0">請選擇產業分類</option>
+                                        <option value="1" selected>直客</option>
+                                        <option value="2">經銷商</option>
+                                    </select>
+                                </div>
                             </fieldset>
                             <fieldset>
                                 <label class="item-title"><span class="c-red">*</span>產業分類</label>
@@ -603,7 +629,23 @@
                             </fieldset>
                             <fieldset>
                                 <label class="item-title"><span class="c-red">*</span>公司地址</label>
-                                <input class="default" type="" name="" value="487 台北市中山區南京東路三段63號5樓">
+                                <div class="confirm both-for-add clearfix">
+                                    <div class="the-select">
+                                        <select class="" name="">
+                                            <option value="0">請選擇縣市</option>
+                                            <option value="1">台北市</option>
+                                            <option value="2">新北市</option>
+                                        </select>
+                                    </div>
+                                    <div class="the-select">
+                                        <select class="" name="">
+                                            <option value="0">請選擇地區</option>
+                                            <option value="1">中山區</option>
+                                            <option value="2">大安區</option>
+                                        </select>
+                                    </div>
+                                    <input class="default" type="" name="" value="台北市中山區南京東路三段63號5樓">
+                                </div>
                             </fieldset>
                             <fieldset>
                                 <label class="item-title"><span class="c-red">*</span>公司電話</label>
@@ -624,6 +666,16 @@
                             <fieldset>
                                 <label class="item-title">公司 Facebook</label>
                                 <input class="default" type="" name="" value="">
+                            </fieldset>
+                            <fieldset>
+                                <label class="item-title"><span class="c-red">*</span>公司類別</label>
+                                <div class="the-select">
+                                    <select class="" name="">
+                                        <option value="0">請選擇產業分類</option>
+                                        <option value="1" selected>直客</option>
+                                        <option value="2">經銷商</option>
+                                    </select>
+                                </div>
                             </fieldset>
                             <fieldset>
                                 <label class="item-title"><span class="c-red">*</span>產業分類</label>
@@ -774,7 +826,23 @@
                             </fieldset>
                             <fieldset>
                                 <label class="item-title"><span class="c-red">*</span>公司地址</label>
-                                <input class="default" type="" name="" value="487 台北市中山區南京東路三段63號5樓">
+                                <div class="confirm both-for-add clearfix">
+                                    <div class="the-select">
+                                        <select class="" name="">
+                                            <option value="0">請選擇縣市</option>
+                                            <option value="1">台北市</option>
+                                            <option value="2">新北市</option>
+                                        </select>
+                                    </div>
+                                    <div class="the-select">
+                                        <select class="" name="">
+                                            <option value="0">請選擇地區</option>
+                                            <option value="1">中山區</option>
+                                            <option value="2">大安區</option>
+                                        </select>
+                                    </div>
+                                    <input class="default" type="" name="" value="台北市中山區南京東路三段63號5樓">
+                                </div>
                             </fieldset>
                             <fieldset>
                                 <label class="item-title"><span class="c-red">*</span>公司電話</label>
@@ -794,6 +862,16 @@
                             <fieldset>
                                 <label class="item-title">公司 Facebook</label>
                                 <input class="default" type="" name="" value="">
+                            </fieldset>
+                            <fieldset>
+                                <label class="item-title"><span class="c-red">*</span>公司類別</label>
+                                <div class="the-select">
+                                    <select class="" name="">
+                                        <option value="0">請選擇產業分類</option>
+                                        <option value="1" selected>直客</option>
+                                        <option value="2">經銷商</option>
+                                    </select>
+                                </div>
                             </fieldset>
                             <fieldset>
                                 <label class="item-title"><span class="c-red">*</span>產業分類</label>
