--- a/CRM/customer_info.html
+++ b/CRM/customer_info.html
@@ -591,8 +591,24 @@
                                 <input class="default" type="" name="" placeholder="">
                             </fieldset>
                             <fieldset>
-                                <label class="item-title">地址</label>
-                                <input class="default" type="" name="" value="">
+                                <label class="item-title"><span class="c-red">*</span>公司地址</label>
+                                <div class="confirm both-for-add clearfix">
+                                    <div class="the-select">
+                                        <select class="" name="">
+                                            <option value="0">請選擇縣市</option>
+                                            <option value="1">台北市</option>
+                                            <option value="2">新北市</option>
+                                        </select>
+                                    </div>
+                                    <div class="the-select">
+                                        <select class="" name="">
+                                            <option value="0">請選擇地區</option>
+                                            <option value="1">中山區</option>
+                                            <option value="2">大安區</option>
+                                        </select>
+                                    </div>
+                                    <input class="default" type="" name="" value="">
+                                </div>
                             </fieldset>
                             <fieldset>
                                 <label class="item-title">備註</label>
@@ -1253,7 +1269,23 @@
                             </fieldset>
                             <fieldset>
                                 <label class="item-title"><span class="c-red">*</span>公司地址</label>
-                                <input class="default" type="" name="" value="487 台北市中山區南京東路三段63號5樓">
+                                <div class="confirm both-for-add clearfix">
+                                    <div class="the-select">
+                                        <select class="" name="">
+                                            <option value="0">請選擇縣市</option>
+                                            <option value="1">台北市</option>
+                                            <option value="2">新北市</option>
+                                        </select>
+                                    </div>
+                                    <div class="the-select">
+                                        <select class="" name="">
+                                            <option value="0">請選擇地區</option>
+                                            <option value="1">中山區</option>
+                                            <option value="2">大安區</option>
+                                        </select>
+                                    </div>
+                                    <input class="default" type="" name="" value="台北市中山區南京東路三段63號5樓">
+                                </div>
                             </fieldset>
                             <fieldset>
                                 <label class="item-title"><span class="c-red">*</span>公司電話</label>
