新增權限控制頁
1.新增 - 權限控制頁
2.新增 - 聯絡人 - 備註欄

--- a/CRM/customer_info.html
+++ b/CRM/customer_info.html
@@ -917,6 +917,10 @@
                                 <label class="item-title">skype</label>
                                 <input class="default" type="" name="" placeholder="">
                             </fieldset>
+                            <fieldset>
+                                <label class="item-title">備註</label>
+                                <textarea></textarea>
+                            </fieldset>
                         </div>
                     </div>
                 </form>
@@ -1000,6 +1004,10 @@
                             <fieldset class="clearfix">
                                 <label class="item-title">skype</label>
                                 <input class="default" type="" name="" placeholder="">
+                            </fieldset>
+                            <fieldset>
+                                <label class="item-title">備註</label>
+                                <textarea>mayday mayday</textarea>
                             </fieldset>
                         </div>
                     </div>
