--- a/iiot/taoyuang1000/register/privacy.html
+++ b/iiot/taoyuang1000/register/privacy.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="zh-TW">
     <head>
         <meta charset="UTF-8">
-        <title>完成資料註冊</title>
+        <title>隱私權及安全政策</title>
         <meta name='description' content=""/>
         <meta name='keywords' content=""/>
         <meta name="MobileOptimized" content="width">
