--- a/iiot/taoyuang1000/event/index.html
+++ b/iiot/taoyuang1000/event/index.html
@@ -12,6 +12,7 @@
     <meta property="og:description" content="加入「桃園市市民卡官方LINE帳號」並完成綁定，簡單步驟即可登錄活動抽紅包！" />
     <meta property="og:type" content="website" />
     <link rel="stylesheet" href="css/style.css">
+    <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script type="text/javascript" src="js/menu.js"></script>
     </script>
