新增 placeholder 和  disabled style

--- a/iiot/taoyuang1000/register/index.html
+++ b/iiot/taoyuang1000/register/index.html
@@ -44,14 +44,14 @@
                     </fieldset>
                     <fieldset class="field">
                         <label for="address">市民卡號</label> 
-                        <div class="r-input">
-                            <input type="text" id="" placeholder="" required="required">
+                        <div class="r-input for-disabled">
+                            <input type="text" id="" placeholder="" required="required" disabled >
                         </div>
                     </fieldset> 
                     <fieldset class="field">
                         <label for="address" class="form-label">手機號碼</label> 
                         <div class="r-input">
-                            <input type="text" id="" placeholder="" required="required">
+                            <input type="text" id="" placeholder="請輸入手機號碼" required="required">
                         </div>
                     </fieldset>
                     <fieldset class="field">
