--- a/iiot/taoyuang1000/register/done.html
+++ b/iiot/taoyuang1000/register/done.html
@@ -12,7 +12,7 @@
         <link rel="stylesheet" href="css/style.css">
         <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
     </head>
-    <body bgcolor="#c93035">
+    <body>
         <!--  main  -->
         <main class="landing">
             <section class="contents-box">
@@ -21,10 +21,27 @@
                 </div>
                 <h1 class="subtitle">
                     您已完成資料註冊<br>
-                    Thank you！
+                    恭喜獲得紅包抽獎機會！
                 </h1>
+                <p class="text-info">持續關注官方Line帳號，掌握活動最新訊息。</p>
                 <!-- 看要不要放↓ -->
-                <button class="btn-style">加入官方帳號好友</button>
+                <a class="btn-style" href="#">活動詳情請洽官網</a>
+            </section>
+            <section class="contents-box">
+                <div class="img">
+                    <img src="images/img-title.png" title="虎你好運抽紅包" width="100%">
+                </div>
+                <h1 class="subtitle">
+                    您已完成資料註冊<br>
+                    恭喜獲得紅包抽獎機會！
+                </h1>
+                <p class="text-info">目前開通的市民卡有兩張：</p>
+                <ul class="nb">
+                    <li><p>12E4587489452789</p></li>
+                    <li><p>1234587489452789</p></li>
+                </ul>
+                <!-- 看要不要放↓ -->
+                <a class="btn-style" href="#">活動詳情請洽官網</a>
             </section>
         </main>
         <footer class="footer">
