--- a/iiot/taoyuang1000/register/index.html
+++ b/iiot/taoyuang1000/register/index.html
@@ -12,7 +12,7 @@
         <link rel="stylesheet" href="css/style.css">
         <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
     </head>
-    <body bgcolor="#c93035">
+    <body>
         <!--  main  -->
         <main class="landing">
             <section class="contents-box">
@@ -22,6 +22,7 @@
                 <h1 class="maintitle">
                     註冊/登入
                 </h1>
+                <p class="text-important">※ 提醒您，<span>資料請務必確實填寫</span>，若資料錯誤或不符以致系統無法驗證身分，將影響您的活動參與資格。</p>
                 <form class="edit-userinfo">
                     <fieldset class="field">
                         <label for="firstName"><span>*</span>真實姓名</label> 
