--- a/iiot/taoyuang1000/event/index.html
+++ b/iiot/taoyuang1000/event/index.html
@@ -11,11 +11,25 @@
     <meta property="og:url" content="#" />
     <meta property="og:description" content="加入「桃園市市民卡官方LINE帳號」並完成綁定，簡單步驟即可登錄活動抽紅包！" />
     <meta property="og:type" content="website" />
+    <link rel="apple-touch-icon" sizes="57x57" href="images/icons/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="images/icons/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="images/icons/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="images/icons/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="images/icons/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="images/icons/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="images/icons/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="images/icons/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="images/icons/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="images/icons/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/icons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="images/icons/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="images/icons/favicon-16x16.png">
+    <link rel="shortcut icon" href="images/icons/favicon.ico" />
+
     <link rel="stylesheet" href="css/style.css">
     <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script type="text/javascript" src="js/menu.js"></script>
-    </script>
     <!-- Pushy -->
     <link rel="stylesheet" href="mobilemenu/pushy.css">
 
@@ -30,7 +44,7 @@
                     <a class="go-section-01">活動辦法</a>
                 </li>
                 <li class="pushy-link">
-                    <a href="#">會員登入/註冊</a>
+                    <a href="/app/register">會員登入/註冊</a>
                 </li>
             </ul>
         </div>
@@ -49,7 +63,7 @@
                     <li class="go-section-01">活動辦法</li>
                     <!-- <li>登錄發票</li>
                     <li>登錄發票</li> -->
-                    <li><a href="#">會員登入/註冊</a></li>
+                    <li><a href="/app/register">會員登入/註冊</a></li>
                 </ul>
             </nav>
         </header>
@@ -150,7 +164,7 @@
                                     <p>活動辦法、期間、中獎名單及相關詳情，以本府市民卡主題網站之公告為準，本府保有修正、補充說明、暫停或終止活動之權利，如有任何變更將公布於活動網站，恕不另行通知；其他未盡事宜，悉依本府相關規定或解釋辦理。</p>
                                 </li>
                                 <li>
-                                    <p>詢問兌獎及活動相關事宜，請於上班時間電洽TEL：（03）3322101 #6967查詢。</p>
+                                    <p>詢問兌獎及活動相關事宜，請於上班時間電洽TEL：（03）332-2107。</p>
                                 </li>
                             </ul>
                         </div>
