--- a/iiot/taoyuang1000/register/index.html
+++ b/iiot/taoyuang1000/register/index.html
@@ -40,7 +40,7 @@
                     <fieldset class="field">
                         <label for="address"><span>*</span>出生日期<br>(西元)</label> 
                         <div class="r-input">
-                            <input type="text" id="" placeholder="" required="required">
+                            <input id="birthday" type="date" placeholder="出生日期">
                         </div>
                     </fieldset>
                     <fieldset class="field">
