--- a/iiot/taoyuang1000/register/index.html
+++ b/iiot/taoyuang1000/register/index.html
@@ -10,6 +10,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta property="og:type" content="website"/>
         <link rel="stylesheet" href="css/style.css">
+        <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
         <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
     </head>
     <body>
@@ -39,9 +40,9 @@
                     </fieldset> 
                     <fieldset class="field">
                         <label for="address"><span>*</span>出生日期<br>(西元)</label> 
-                        <div class="r-input">
+                        <div class="r-input for-bd">
                             <input id="birthday" type="date" placeholder="出生日期">
-                        </div>
+                        </div>  
                     </fieldset>
                     <fieldset class="field">
                         <label for="address">市民卡號</label> 
