官網 + a 連到註冊頁

--- a/iiot/taoyuang1000/event/index.html
+++ b/iiot/taoyuang1000/event/index.html
@@ -72,10 +72,10 @@
                 <section class="content">
                     <div class="main-title clearfix">
                         <div class="i-a">
-                            <img src="images/main-title.png" title="虎你好運抽紅包" width="100%">
+                            <a href="/app/register"><img src="images/main-title.png" title="虎你好運抽紅包" width="100%"></a>
                         </div>
                         <div class="i-b">
-                            <img src="images/tiger.png" title="tiger" width="100%">
+                            <a href="/app/register"><img src="images/tiger.png" title="tiger" width="100%"></a>
                         </div>
                     </div>
                     <h3 class="sub-title"><span>新年就要試手氣！桃園市市民卡，虎你好運抽好包！</span><br>
